--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Teko:wght@300;400&display=swap');
 
 
 *{
@@ -71,7 +70,6 @@ nav{
     color: #77ffc0;
 }
 
-
 .containerAberto{
     position: fixed;
     right: 0;
@@ -129,8 +127,7 @@ nav{
 /*FIM DO NAV HEADER*/
 
 /*Começo do MAIN HEADER*/
-.MainHeader{
-    
+.MainHeader{ 
     display: flex;
     height: 100vh;
     width: 100vw; 
@@ -221,8 +218,8 @@ Aligh-items: ajusta o eixo Y*/
     padding: 25px;
     border-radius: 15px;
     text-align: center;
-    border: 2px solid black;
-    background-color: #2f2841;
+    /*border: 2px solid black;*/
+    /*background-color: #2f2841;*/
 }
 
 .ConteudoDivSelectionContainer{
@@ -298,10 +295,21 @@ Aligh-items: ajusta o eixo Y*/
 
 /*Começo Experiência*/
 
-.mainExperiência{
-    height: 200px;
+.mainExperiencia{
+    height: 500px;
     background: #201b2c;
+    display: flex;
+    justify-content: space-between;
 }
+
+
+.DefineTamanhoExperiencia{
+    width: 200px;
+    background: blueviolet  ;
+    
+
+}
+
 /*Fim Experiência*/
 
 
@@ -315,7 +323,6 @@ Aligh-items: ajusta o eixo Y*/
     text-align: center;
     display: flex;
     justify-content: center;
-    
 }
 
 /*Fim do footer*/
