--- a/assets/style.css
+++ b/assets/style.css
@@ -293,21 +293,56 @@ Aligh-items: ajusta o eixo Y*/
 
 /*Final do SOBRE*/
 
-/*Começo Experiência*/
+/*Começo Projects*/
 
-.mainExperiencia{
-    height: 500px;
-    background: #201b2c;
+
+.mainProjects{
+    height: 300px;
+    background: #201b2c; 
     display: flex;
-    justify-content: space-between;
 }
 
+.LadoEsquerdoProjects{
+    height: 300px;
+    /*background: blue;*/
+    width: 50%;
+}
 
-.DefineTamanhoExperiencia{
-    width: 200px;
-    background: blueviolet  ;
+.LadoEsquerdoProjects img{
+    height: 40px;
+    width: 40px;
+}
+
+.DefineTamanhoEsquerdoProjects{
+    padding: 60px;
     
+    text-align: center;
+}
 
+.DefineTamanhoEsquerdoProjects h1{
+    font-size: 30px;
+}
+
+.DefineTamanhoEsquerdoProjects span{
+    color: #77ffc0; 
+}
+
+.LadoDireitoProjects{
+    height: 300px;
+    /*background: blue;*/
+    width: 50%;
+}
+
+.LadoDireitoProjects img{
+    width: 400px;
+    height: 250px;
+    border-radius: 30px;
+}
+
+.AjustaImagemProjects{
+    padding: 20px;
+    text-align: center;
+   
 }
 
 /*Fim Experiência*/
