--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,11 @@ a:hover{
     opacity: 0.7;
 }
 
+.NavFixed{
+    position: fixed;
+    width: 100%;
+}
+
 .LogoNav{
     font-size: 24px;
     text-transform: uppercase;
@@ -154,7 +159,7 @@ h1, p{
 Aligh-items: ajusta o eixo Y*/
 
 .esquerdaHeader{
-    width: 50vh;
+    width: 50%;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -167,18 +172,40 @@ Aligh-items: ajusta o eixo Y*/
 }
 
 .direitaHeader{
-    width: 60%;
-    display: flex;
+    width: 50%;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    
 }
 
-.direitaHeaderImagem img{
-    width: 60px;
-    height: 60px;
+
+.TextDireitaHeader{
+    padding: 3px;
+}
+.direitaHeaderImagem{
+    
+    width: 500px;
+    font-size: 50px;
     border-radius: 2px;
     padding-top: 5px;
+    text-align: center;
+    color: aqua;
+    
+}
+
+.direitaHeaderImagem i {
+    
+    border-radius: 5px;
+    padding: 3px;
+    border-radius: 15px;
+    
+}
+.direitaHeaderImagem i:hover{
+    cursor: pointer;
+    background: white;
+    color: #77ffc0; 
+    
+    
 }
 
 /*Fim do MAIN HEADER*/
@@ -290,6 +317,19 @@ Aligh-items: ajusta o eixo Y*/
     width: 230px;
     text-align: center;
 }
+
+
+.LadoDireitoProjects .AjustaImagemProjects:hover{
+    cursor: pointer;
+    transform: scale(1.05) ;
+    
+}
+
+.LadoEsquerdoProjects .DefineTamanhoEsquerdoProjects:hover{
+    
+}
+
+
 
 /*---------------------------------------Final do SOBRE---------------------------------------*/
 
