--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,10 @@
 
 *{
     box-sizing: border-box;
+    
+}
+
+body{
     font-family: 'Roboto', sans-serif;
 }
 
@@ -203,21 +207,10 @@ Aligh-items: ajusta o eixo Y*/
 }
 .direitaHeaderImagem i:hover{
     cursor: pointer;
-    background: white;
-    color: #77ffc0; 
-    
-    
+    color: #77ffc0;   
 }
 
 /*Fim do MAIN HEADER*/
-
-/*.card{
-    width: 100px;
-    padding: 16px;
-    margin: 25px
-    border:none;
-
-}*/
 
 .SeparaConteudo{
     color: #77ffc0; 
@@ -229,110 +222,6 @@ Aligh-items: ajusta o eixo Y*/
     letter-spacing: 4px;
 }
 
-
-
-
-
-
-
-
-/*---------------------------------------Começo do SOBRE---------------------------------------*/
-.MainSobre{
-   display: flex;
-   background: #201b2c;
-   height: 300px;
-    
-}
-
-.EsquerdaSobre{
-  padding: 0 200px;
-  padding-top: 20px;
-  height: 300px;
-    
-}
-
-.DefineTamanhoSobreEsquerda img{
-    width:250px;
-    height: 250px;
-    border-radius: 150px;
-}
-
-
-
-.DireitaSobre{
-    padding-top: 60px;
-    height: 300px;
-    
-}
-.DefineMargemSobreDireita{
-    width: 600px;
-    text-align: center;
-    font-size: 23px;
-}
-
-.DefineTamanhoSobreDireita img{
-    padding-top: 20px;
-    height: 100px;
-}
-.IconsSobre{
-    display: flex;
-    justify-content: space-around;
-}
-.IconsSobre img{
-    cursor: pointer;
-}
-
-.IconsSobre img :hover{
-    color: blue;
-}
-
-
-/*Icons Projects*/
-
-.MainIconsProjects{
-    height: 125px;
-    background: #201b2c; 
-    
-}
-
-.LarguraIconsProjects{
-    width: 100%;
-    height: 100px;
-    justify-content: space-evenly;
-    display: flex;
-    flex-wrap: wrap;
-    color: #77ffc0; 
-}
-
-.LarguraIconsProjects img{
-    width: 50px;
-    height: 50px;
-}
-
-.LarguraIconsProjects h1{
-    font-size: 30px;
-    padding: 10px;
-}
-
-.bordaIconsProjects{
-    width: 230px;
-    text-align: center;
-}
-
-
-.LadoDireitoProjects .AjustaImagemProjects:hover{
-    cursor: pointer;
-    transform: scale(1.05) ;
-    
-}
-
-.LadoEsquerdoProjects .DefineTamanhoEsquerdoProjects:hover{
-    
-}
-
-
-
-/*---------------------------------------Final do SOBRE---------------------------------------*/
 
 /*---------------------------------------Começo Projects---------------------------------------*/
 
@@ -349,23 +238,37 @@ Aligh-items: ajusta o eixo Y*/
     width: 50%;
 }
 
-.LadoEsquerdoProjects img{
-    height: 40px;
-    width: 40px;
-}
+
 
 .DefineTamanhoEsquerdoProjects{
     padding: 60px;
-    
     text-align: center;
 }
 
 .DefineTamanhoEsquerdoProjects h1{
     font-size: 30px;
+    padding-bottom: 10px;
+}
+
+.SpanTeste{
+    padding: 10px;
 }
 
 .DefineTamanhoEsquerdoProjects span{
-    color: #77ffc0; 
+    color: #77ffc0;
+    font-size: 20px;  
+}
+
+.DefineTamanhoBootStrapProjects i{
+    font-size: 40px;
+    text-align: center;
+    color: aqua;
+}
+
+.DefineTamanhoBootStrapProjects i:hover{
+    cursor: pointer;
+    color: #77ffc0;
+    
 }
 
 .LadoDireitoProjects{
@@ -386,10 +289,122 @@ Aligh-items: ajusta o eixo Y*/
     z-index: 2;
 }
 
+.DefineTamanhoButtonProjects{
+    padding: 5px;
+    border-radius: 10px;
+    color: aqua;
+    background: #201b2c; 
+}
+
+.DefineTamanhoButtonProjects:hover{
+    background: #77ffc0;
+    color: black;
+    cursor: pointer;
+}
 
 
 
 /*----------------------------------------Fim Experiência---------------------------------------*/
+
+
+/*---------------------------------------Começo do SOBRE---------------------------------------*/
+.MainSobre{
+    display: flex;
+    background: #201b2c;
+    height: 300px;
+     
+ }
+ 
+ .EsquerdaSobre{
+   padding: 0 200px;
+   padding-top: 20px;
+   height: 300px;
+     
+ }
+ 
+ .DefineTamanhoSobreEsquerda img{
+     width:250px;
+     height: 250px;
+     border-radius: 150px;
+ }
+ 
+ 
+ 
+ .DireitaSobre{
+     padding-top: 60px;
+     height: 300px;
+     
+ }
+ .DefineMargemSobreDireita{
+     width: 600px;
+     text-align: center;
+     font-size: 23px;
+ }
+ 
+ .DefineTamanhoSobreDireita img{
+     padding-top: 20px;
+     height: 100px;
+ }
+ .IconsSobre{
+     display: flex;
+     justify-content: space-around;
+ }
+ .IconsSobre img{
+     cursor: pointer;
+ }
+ 
+ .IconsSobre img :hover{
+     color: blue;
+ }
+ 
+ 
+ /*Icons Projects*/
+ 
+ .MainIconsProjects{
+     height: 125px;
+     background: #201b2c; 
+     
+ }
+ 
+ .LarguraIconsProjects{
+     width: 100%;
+     height: 100px;
+     justify-content: space-evenly;
+     display: flex;
+     flex-wrap: wrap;
+     color: #77ffc0; 
+ }
+ 
+ .LarguraIconsProjects img{
+     width: 50px;
+     height: 50px;
+ }
+ 
+ .LarguraIconsProjects h1{
+     font-size: 30px;
+     padding: 10px;
+ }
+ 
+ .bordaIconsProjects{
+     width: 230px;
+     text-align: center;
+ }
+ 
+ 
+ .LadoDireitoProjects .AjustaImagemProjects:hover{
+     cursor: pointer;
+     transform: scale(1.05) ;
+     
+ }
+ 
+ .LadoEsquerdoProjects .DefineTamanhoEsquerdoProjects:hover{
+     
+ }
+ 
+ 
+ 
+ /*---------------------------------------Final do SOBRE---------------------------------------*/
+ 
 
 
 /*---------------------------------------Começo do footer---------------------------------------*/
@@ -397,11 +412,15 @@ Aligh-items: ajusta o eixo Y*/
 .footerMain{
     height: 50px;
     background: #23232e;
-}
-.ConteudoFooter{
-    text-align: center;
     display: flex;
+    align-items: center;
     justify-content: center;
+    font-size: 20px;
+}
+
+.footerMain h1{
+    height: 100%;
+    padding-top: 15px;
 }
 
 /*---------------------------------------Fim do footer---------------------------------------*/
